--- a/styles/all/theme/participate.css
+++ b/styles/all/theme/participate.css
@@ -4,5 +4,5 @@
 .grijs {color: #888 !important;}
 .zwart {color: #000;}
 .doorstreept {text-decoration: line-through; }
-.participantsbar {clear:both color: #105289;}
+.participantsbar {clear:both color: #105289;display:inline-block;}
 
